--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -1,12 +1,23 @@
 $primary: #EEC35D;
-$secondary: #5D89EE;
+$secondary: #CFB67C;
 $light: $secondary;
 
+.color-none {
+  color: none;
+  border-color: none;
+}
 .navbar-brand,
 .navbar-nav,
 .navbar-link,
 .navbar-light {
   color: $secondary;
+}
+
+.form-row {
+  input, select {
+    border-style: none none solid;
+    background-color: #ededed;
+  }
 }
 
 // Required
@@ -22,9 +33,10 @@ $light: $secondary;
 @import "../../../node_modules/bootstrap/scss/grid";
 
 
-section,
-section::before,
-section::after {
+
+#section,
+#section::before,
+#section::after {
   min-height: 100vh;
   box-shadow: 0 1px 3px 1px rgb(41, 41, 41) ;
   background-attachment: fixed;
@@ -38,13 +50,18 @@ section::after {
   // animation-fill-mode: forwards;
   background-position-x: center, 200vw, 200vw, 200vw, 200vw;
 }
+.appointmentUI {
+  box-shadow: inset 0 0 10px 10px $primary;
+  border: 1px solid black;
+  border-radius: 1%;
+  background-color: darken($primary, 10%);
+}
 
 /* Layout */
 .container-fluid{
   padding-left: 0;
   padding-right: 0;
 }
-
 
 /* Banner */
 
